<resources>
    <string name="app_name">health care</string>

    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sing_up">Sing Up</string>
    <string name="name">Name</string>
    <string name="exit">Exit</string>
    <string name="successfully_booked">Successfully booked</string>
    <string name="we_will_contact_you_soon">We will <b>contact</b> you soon.\n\nkindly note we will <b>contact</b> with you in the <b><i>next hours.</i></b>\n\nif the payment <b>isn\'t</b> made within <b><i>two days</i></b> it will be <b>cancelled</b>.\n\n<b>Do you want to <i>Contact Us</i> first?</b></string>
    <string name="dismiss">Dismiss</string>
    <string name="done">Done</string>
    <string name="available">Available</string>
    <string name="welcome_mina">Welcome Mina !</string>
    <string name="lang">عربي</string>
    <string name="clinics">Clinics</string>
    <string name="blood_donation">Blood Donation</string>
    <string name="blood_transfusion">Blood Transfusion</string>
    <string name="choose_service_you_want">Choose Service You Want</string>
    <string name="el_sherouk_hospital">El Sherouk Hospital</string>
    <string name="dar_alqmah_hospital">Dar Alqmah Hospital</string>
    <string name="ibn_sina_hospital">Ibn Sina Hospital</string>
    <string name="dar_alshefaa_hospital">Dar Alshefaa Hospital</string>
    <string name="sorry_this_appointment_is_not_available">Sorry this appointment is not available</string>
    <string name="sorry_this_blood_type">Sorry This Blood Type&amp;Group Is Not Available In This Hospital</string>
    <string name="Endocrinology">Endocrinology</string>
    <string name="Cardiology">Cardiology</string>
    <string name="Ophthalmology">Ophthalmology</string>
    <string name="Pediatrics">Pediatrics</string>
    <string name="Dermatology">Dermatology</string>
    <string name="neurology">Neurology</string>
    <string name="Dentistry">Dentistry</string>
    <string name="Psychiatry">Psychiatry</string>
    <string name="welcome_dr">Welcome DR.</string>
    <string name="add_appointments">Add Appointments</string>
    <string name="my_appointments">My Appointments</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_valid_email">Enter Valid Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_your_password">"Confirm your Password"</string>
    <string name="password_confirm_password_must_be_same">Password &amp; confirm password must be same</string>
    <string name="enter_name">Enter Name</string>
    <string name="email_or_password_not_correct">email &amp; password not correct</string>
    <string name="ahmed">Ahmed</string>
    <string name="delete">Delete</string>
    <string name="confirm">Confirm</string>
    <string name="choose_hospital">Choose Hospital :</string>
    <string name="hospital_name">Hospital Name</string>
    <string name="choose_day">Choose day :</string>
    <string name="from">From :</string>
    <string name="choose_start_time">Choose Start Time</string>
    <string name="to">To :</string>
    <string name="choose_end_time">Choose End Time</string>
    <string name="let_s_get_started">Let\'s get started!</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="are_you">are you ?</string>
    <string name="doctor">DOCTOR</string>
    <string name="client">CLIENT</string>
    <string name="choose_time">Choose Time :</string>
    <string name="continu">Continue</string>
    <string name="choose_blood_type">Choose Blood Type :</string>
    <string name="choose_blood_group">Choose blood Group :</string>
    <string name="choose_clinic">Choose Clinic :</string>
    <string name="add_image">ADD IMAGE</string>
</resources>