<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.AddAppointmentsFragment"
    android:background="@color/primary_light">
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageSignOut"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:background="@drawable/background_icon"
        android:padding="@dimen/_6sdp"
        android:src="@drawable/ic_logout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:tint="@color/white"/>
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageMore"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/background_icon"
        android:padding="@dimen/_6sdp"
        android:src="@drawable/ic_more"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:tint="@color/white"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">


        <ImageView
            android:id="@+id/ImageView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_120sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/background_content_bottom"
            android:clipToPadding="false"
            android:overScrollMode="never"
            android:padding="@dimen/_24sdp"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ImageView">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/create_new_account"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/_18ssp"
                    android:textStyle="bold"/>
                <FrameLayout
                    android:id="@+id/layoutImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp">
                    <com.makeramen.roundedimageview.RoundedImageView
                        android:id="@+id/imageProfile"
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="@dimen/_80sdp"
                        android:background="@drawable/background_image"
                        android:scaleType="centerCrop"
                        app:riv_oval="true"/>
                    <TextView
                        android:id="@+id/textAddImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/add_image"
                        android:textColor="@color/secondary_text"
                        android:textSize="@dimen/_10ssp"/>


                </FrameLayout>

                <Spinner
                    tools:listitem="@layout/item_dropdown"
                    android:id="@+id/clinicName"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/background_input"
                    android:hint="Clinic Name"
                    android:spinnerMode="dropdown"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingEnd="@dimen/_16sdp"
                    />

                <EditText
                    android:id="@+id/inputPhone"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:background="@drawable/background_input"
                    android:hint="@string/enter_phone"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="phone"
                    android:paddingStart="@dimen/_16sdp"
                    android:paddingEnd="@dimen/_16sdp"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/_13ssp"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:animateLayoutChanges="true">
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/buttonSignUp"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_50sdp"
                        android:text="@string/sing_up"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_13ssp"
                        android:textStyle="bold"
                        app:cornerRadius="@dimen/_8sdp"
                        />
                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_23sdp"
                        android:layout_gravity="center"
                        android:visibility="invisible"/>
                </FrameLayout>


            </LinearLayout>
        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120sdp"
        android:cropToPadding="true"
        android:scaleType="fitCenter"
        android:src="@drawable/logo3"
        android:transitionName="image_small"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="@dimen/_10sdp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>